# garmintools

./: .appveyor.yml  .cirrus.yml  .travis.yml  NEWS  meson.build
po/: POTFILES  meson.build
src/: garmin_tcx.c
